# nunchaku

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  README_ZH.md  amend_metadata.py  debug.py  example.ipynb  example.py  flux.1-dev_v2.py  flux_model_FBCache_test.ipynb  flux_model_test.ipynb  loaded_sd.txt  lora_bf16.py  lora_fp4.py  model.txt  model_sd.txt  modify_t5_encoder.py  predict.py  pyproject.toml  qwen-image-edit-lora.py  qwen-image-lightning.py  qwen-image-lora.py  qwen-image.py  requirements.txt  run.py  run.sh  run_DFB_Batch.py  server.py  setup.py  svdq_test.ipynb  upload_models.py  view_safetensors.py
.cog/: openapi_schema.json
.github/: CODEOWNERS
.github/workflows/: build-docs.yaml  lint.yaml  nightly-build.yaml  pr-test.yaml  release-build.yaml  run_all_tests.py  sync-hf-to-ms.yaml  sync-to-private.yml  test-ampere.yaml  test_ampere.yaml  test_blackwell.yaml
app/: requirements.txt
comfyui/: __init__.py
debug/: flux.1-fill-dev16.py  flux.1-fill-dev4.py
dev-scripts/: flux.1-dev.py
diffusers/0.30.3/: attention_processor.py  pipeline_flux.py  transformer_flux.py
diffusers/0.30.3--controlnet-support/: transformer_flux.py
diffusers/0.31.0/: attention_processor.py  pipeline_flux.py  transformer_flux.py
docs/source/: _link.rst  conf.py  index.rst  links.rst
examples/: flux.1-dev-IP-adapter.py  flux.1-dev-colossus.py  flux.1-dev-controlnet-union-pro.py  flux.1-dev-double_cache_offloading.py  flux.1-dev-lora-omini.py  flux.1-dev-lora-to-diffusers.py  flux.1-dev-pulid.py  flux.1-dev-qencoder.py  flux.1-dev-teacache-batch.py  flux.1-dev-teacache.py  flux.1-fill-dev.py  flux.1-kontext-FALAI_lora.py  flux.1-kontext-dev-teacache.py  flux.1-kontext-dev.py  my_flux.py  sdxl-turbo.py  sdxl.py  teacache.py
examples/v1/: flux.1-dev-lora.py  flux.1-dev-multiple-lora.py  flux.1-dev-v2-cache.py  flux.1-dev-v2-lora.py  flux.1-dev_v2.py  flux.1-fill-dev.py  flux.1-kontext-dev.py  flux.1-krea-dev.py  qwen-image-controlnet.py  qwen-image-edit-2509-lightning.py  qwen-image-edit-2509.py  qwen-image-edit-lightning.py  qwen-image-edit-lora.py  qwen-image-edit.py  qwen-image-lightning.py  qwen-image-lora.py  qwen-image.py  sdxl-cache.py  sdxl-turbo.py  sdxl.py  z-image-turbo.py
nunchaku/: __init__.py  converter.py  dtype_utils.py  merge_models.py  merge_safetensors.py  merge_t5.py  test.py  test_controlnet.py  test_pulid.py  utils.py
nunchaku/caching/: teacache.py  utils.py  utils_sdxl.py  utils_v2.py
nunchaku/csrc/: flux.h  gemm.h  pybind.cpp
nunchaku/models/: __init__.py  attention.py  attention_processor.py  embeddings.py  flux.py  linear.py  normalization.py  transformer_flux.py  utils.py
nunchaku/ops/: fused.py  gemm.py  gemv.py  quantize.py
nunchaku/pipeline/: __init__.py  pipeline_flux.py  pipeline_flux_IPA.py  pipeline_flux_omini.py  pipeline_flux_pulid.py  pipeline_qwenimage.py
nunchaku/pipelines/: flux.py
scripts/: build_all_linux_wheels.sh  build_compyui_desktop.cmd  build_linux_wheel.sh  build_windows_wheel.cmd  run_all_tests.py  sync_hf_to_ms.py
src/: FluxModel.cpp  FluxModel.h  Linear.cpp  OminiFluxModel.cpp  OminiFluxModel.h  Tensor.h
src/interop/: torch.h
src/kernels/: misc_kernels.cu  misc_kernels.h  misc_kernels_impl.cuh
tests/: requirements.txt  test_flux_txt2img_cache_controlnet.py  test_pin_memory_auto.py  utils.py
tests/flux/: test_flux_DoubleFBCache.py  test_flux_cache.py  test_flux_dev.py  test_flux_dev_IPA.py  test_flux_dev_loras_v2.py  test_flux_dev_pulid.py  test_flux_double_fb_cache.py  test_flux_kontext.py  test_flux_kontext_lora.py  test_flux_schnell.py  test_flux_speed.py  test_flux_teacache.py  test_flux_txt2img_cache_controlnet.py  test_lora_reset.py  test_multiple_batch.py  utils.py
tests/sdxl/: test_sdxl.py  test_sdxl_turbo.py
tests/v1/: test_examples.py  utils.py
(+212 files in other folders)
