[tool.isort]
profile = "black"
known_first_party = ["nunchaku"]
line_length = 120

[tool.black]
line-length = 120
target-version = ['py311']

[tool.ruff]
line-length = 120

[project]
dynamic = ["version"]
name = "nunchaku"
dependencies = [
    "diffusers>=0.35.1",
    "transformers>=4.53.3",
    "accelerate>=1.9.0",
    "sentencepiece",
    "protobuf",
    "huggingface_hub>=0.34",
    "peft>=0.17",
    "einops",
]
requires-python = ">=3.10"

[build-system]
requires = [
    "setuptools",
    "torch>=2.5",
    "wheel",
    "ninja",
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "insightface",
    "opencv-python",
    "facexlib",
    "onnxruntime",
    "timm",
    "pytest",
    "datasets<4",
    "torchmetrics",
    "mediapipe",
    "pytest-rerunfailures",
    "git+https://github.com/asomoza/image_gen_aux.git",
    "controlnet_aux",
]
full = [
    "insightface",
    "opencv-python",
    "facexlib",
    "onnxruntime",
    "timm",
    "git+https://github.com/asomoza/image_gen_aux.git",
    "controlnet_aux",
]
demo = [
    "gradio==5.39",
    "spaces",
    "git+https://github.com/asomoza/image_gen_aux.git",
    "controlnet_aux",
]
docs = [
    "sphinx",
    "sphinx-tabs",
    "myst-parser",
    "sphinx-copybutton",
    "breathe",
    "sphinxcontrib-mermaid",
    "nbsphinx",
    "jupyter",
    "ipykernel",
    "graphviz",
    "sphinxext-rediraffe",
    "furo",
    "sphinxawesome-theme",
    "sphinx-book-theme",
    "sphinx-rtd-theme",
]

[tool.setuptools.packages.find]
include = ["nunchaku"]

[tool.doc8]
max-line-length = 120
ignore-path = ["docs/_build"]
ignore = ["D000", "D001"]

[tool.rstcheck]
ignore_directives = ["tabs"]
ignore_messages = ["ERROR/3", "INFO/1"]
